--- a/libraries/categories/templates/categories/special_collections_page.html
+++ b/libraries/categories/templates/categories/special_collections_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_class %}page--{{ page.category.slug }}{% endblock %}
-{# @TODO block schema_org #}
+{# TODO block schema_org #}
 {% block content %}
 
     <div class="wrapper wrapper--padding-top">
