--- a/libraries/libraries/static/scss/components/staff/_staff-list.scss
+++ b/libraries/libraries/static/scss/components/staff/_staff-list.scss
@@ -19,7 +19,7 @@
             flex-wrap: wrap;
 
             .search-result {
-                // @TODO shouldn't this be a flex directive not width based?
+                // TODO shouldn't this be a flex directive not width based?
                 max-width: 50%;
             }
         }
