fix: update schema.org across many page templates
remove old Oakland address from everywhere
remove Oakland city from home page and edit home page title to be simply CCA Libraries

--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -9,7 +9,7 @@
 {
     "@context": "http://schema.org/",
     "@type": "WebPage",
-	"name": "CCA Libraries Home Page",
+	"name": "CCA Libraries",
 	"primaryImageOfPage": {
 		"@type": "ImageObject",
         "@id": "{{ current_site.root_url }}{{ main_image.url }}",
@@ -28,21 +28,11 @@
         "areaServed": [
             {
                 "@type": "City",
-                "name": "Oakland"
-            }, {
-                "@type": "City",
                 "name": "San Francisco"
             }
         ],
         "address": [
             {
-                "@type": "PostalAddress",
-                "addressLocality": "Oakland",
-                "addressRegion": "CA",
-                "streetAddress": "5212 Broadway",
-                "postalCode": "94618",
-                "telephone": "510-594-3658"
-            }, {
                 "@type": "PostalAddress",
                 "addressLocality": "San Francisco",
                 "addressRegion": "CA",
