feat: AbuseIPDB verification

--- a/libraries/libraries/templates/components/head/head.html
+++ b/libraries/libraries/templates/components/head/head.html
@@ -8,6 +8,8 @@
     <meta property="og:description" content="{{self.search_description}}"/>
 {% endif %}
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+{# Eric's Abuse IP DB verification https://www.abuseipdb.com/ #}
+<meta name="abuseipdb-verification" content="FT297JSV" />
 
 {% include 'components/head/seo.html' %}
 
