fix: update main bldg address
closes #62

--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -32,7 +32,7 @@
                 "@type": "PostalAddress",
                 "addressLocality": "San Francisco",
                 "addressRegion": "CA",
-                "streetAddress": "1111 8th St",
+                "streetAddress": "145 Hooper Street",
                 "postalCode": "94107",
                 "telephone": "415-703-9574"
             }
