--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -7,7 +7,7 @@
 		<li class="footer-section__site">
 			<h5 class="footer-section__site-name">Simpson Library</h5>
 			<p class="footer-section__site-address">San Francisco</p>
-			<p class="footer-section__site-address">1111 8th St</p>
+			<p class="footer-section__site-address">145 Hooper Street</p>
 			<p class="footer-section__site-address">
 				<a href="tel:14157039574">415.703.9574</a>
 			</p>
@@ -18,7 +18,7 @@
 		<li class="footer-section__site">
 			<h5 class="footer-section__site-name">Materials Library</h5>
 			<p class="footer-section__site-address">San Francisco</p>
-			<p class="footer-section__site-address">1111 8th St</p>
+			<p class="footer-section__site-address">145 Hooper Street</p>
 			<p class="footer-section__site-address">(2nd floor, between S-16 & LRC)</p>
 			<p class="footer-section__site-address">
 				<a href="tel:14155519266">415.551.9266</a>
