fix(a11y): header hierarchy in footer

--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -1,4 +1,6 @@
 <footer class="footer js-footer">
+	<!-- purely for header hierarchy reasons -->
+	<h3 class="sr-only">Footer</h3>
 	<div class="wrapper">
 		<ul class="footer__sections">
 			{% include 'components/footer/footer-links.html' %}
