fix(a11y): h1 on home page

--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -67,6 +67,8 @@
 {% block body_class %}home{% endblock %}
 
 {% block content %}
+    <h1 class="sr-only">CCA Libraries</h1>
+
     <link rel="preconnect" href="https://cca.summon.serialssolutions.com">
     {% include "home/home-hero.html" %}
 
