--- a/libraries/home/templates/home/home-instagram.html
+++ b/libraries/home/templates/home/home-instagram.html
@@ -5,7 +5,7 @@
 	<div class="home-news-item__image-wrapper home-news-item__image-wrapper--instagram">
 		<a href="https://www.instagram.com/{{ instagram.username }}/">
 			{% if instagram.image %}
-				{% image instagram.image width-312 alt=instagram.text class="home-news-item__image" %}
+				{% image instagram.image width-312 alt="CCA Libraries Instagram" class="home-news-item__image" %}
 			{% else %}
 			<img
 				alt="Instagram image"
