--- a/libraries/categories/templates/categories/blocks/card.html
+++ b/libraries/categories/templates/categories/blocks/card.html
@@ -1,6 +1,7 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 {% comment %} based on Portal's "card" template {% endcomment %}
 <section class="card">
+    <!-- TODO: try h3 for a11y header hierarchy -->
     <h4 class="card__header">
         <a class="card__link" href="{{ value.link.url }}">
             {% image value.thumbnail fill-600x400 class="card__thumb" %}
